fix(safety-under-the-clouds): corner Img left doesnt overlap with text

--- a/assets/scss/components/_testimonial-teaser.scss
+++ b/assets/scss/components/_testimonial-teaser.scss
@@ -55,7 +55,7 @@
   width: 100%;
   z-index: 2;
   //margin-left: 3rem;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   &.testimonial-teaser__corner--left {
     margin-left: 3rem;
   }
@@ -66,7 +66,12 @@
 
   img {
     height: auto;
-    width: 100px;
+    @include media-breakpoint-up(xs) {
+      width: 60px;
+    }
+    @include media-breakpoint-up(md){
+      width: 100px;
+    }
   }
 }
 
